--- a/index.html
+++ b/index.html
@@ -1,54 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="icon" href="images/icons/logo.png" type="image/png">
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css"> -->
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,300,300i,400,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="icon" href="images/icons/logo.png" type="image/png" />
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css"> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,300,300i,400,600,600i,700,700i,800,800i,900,900i&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
     <!-- header starts here -->
 
+    <!-- header ends here -->
 
-     <!-- header ends here -->
+    <!-- section one starts here -->
 
-     <!-- section one starts here -->
+    <!-- section one ends here -->
 
+    <!-- section two starts here -->
 
-      <!-- section one ends here -->
+    <!-- section two ends here -->
 
-       <!-- section two starts here -->
+    <!-- section three starts here -->
 
+    <!-- section three ends here -->
 
-      <!-- section two ends here -->
+    <!-- section four starts here -->
 
-       <!-- section three starts here -->
+    <!-- section four ends here -->
 
+    <!-- section five starts here -->
 
-      <!-- section three ends here -->
+    <!-- section five ends here -->
+    <section class="fifth-heghlight-wrapper">
+     <!-- fifth section  -->
+      <div class="products-container">
+        <div class="product3 product">
+          <img src="./images/icons/apple-tv-logo.png" alt="" />
+          <div class="description">
+            <img src="./images/icons/servant-logo.png" />
+          </div>
+          <div class="watch-link">
+            <a href="#"
+              >Watch the trailer <i class="fa-solid fa-circle-play"></i
+            ></a>
+          </div>
+        </div>
 
-       <!-- section four starts here -->
+        <div class="product4 product">
+          <h2>AirPod Pro</h2>
+          <p class="description">Magic like you’ve never heard.</p>
+          <div class="links">
+            <a href="#">Learn more <i class="fa-solid fa-angle-right"></i></a>
+            <a href="#">Buy <i class="fa-solid fa-angle-right"></i></a>
+          </div>
+        </div>
+      </div>
 
+    </section>
 
-      <!-- section four ends here -->
+    <!-- section six starts here -->
+    <section class="sixth-heghlight-wrapper">
+       <div class="products-container">
+        <div class="product5 product">
+          <p class="model">16-inch model</p>
+          <h2>MacBook Pro</h2>
+          <p class="description">The best for the brightest.</p>
+          <div class="links">
+            <a href="#">Learn more <i class="fa-solid fa-angle-right"></i></a>
+            <a href="#">Buy <i class="fa-solid fa-angle-right"></i></a>
+          </div>
+        </div>
 
-       <!-- section five starts here -->
+        <div class="product6 product">
+          <img src="./images/icons/new-ipad-logo.png" alt="" />
+          <p class="description">Like a computer. Unlike any computer.</p>
+          <div class="links">
+            <a href="#">Learn more <i class="fa-solid fa-angle-right"></i></a>
+            <a href="#">Buy <i class="fa-solid fa-angle-right"></i></a>
+          </div>
+        </div>
+      </div>
+    </section>
 
+    <!-- section six ends here -->
 
-      <!-- section five ends here -->
+    <!-- fotter starts here -->
 
-       <!-- section six starts here -->
-
-
-      <!-- section six ends here -->
-
-       <!-- fotter starts here -->
-
-
-      <!-- footer one ends here -->
-</body>
+    <!-- footer one ends here -->
+  </body>
 </html>
