i have been added sectionThree

--- a/index.html
+++ b/index.html
@@ -1,54 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="icon" href="images/icons/logo.png" type="image/png">
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css"> -->
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,300,300i,400,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="icon" href="images/icons/logo.png" type="image/png" />
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css"> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,300,300i,400,600,600i,700,700i,800,800i,900,900i&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <!-- header starts here -->
 
+    <!-- header ends here -->
 
-     <!-- header ends here -->
+    <!-- section one starts here -->
 
-     <!-- section one starts here -->
+    <!-- section one ends here -->
 
+    <!-- section two starts here -->
 
-      <!-- section one ends here -->
+    <!-- section two ends here -->
 
-       <!-- section two starts here -->
+    <!-- section three starts here -->
+    <section class="third-highlight-wrapper full-highlight-section">
+      <div class="internal-wrapper">
+        <div class="title-wraper">iPhone 11</div>
+        <div class="description-wrapper">
+          Just the right amount of everything.
+        </div>
+        <div class="price-wrapper">From $16.62/mo. or $399 with trade‑in.</div>
+        <div class="links-wrapper">
+          <ul>
+            <li><a href="">Learn more</a></li>
+            <li><a href="">Buy</a></li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
+    <!-- section three ends here -->
 
-      <!-- section two ends here -->
+    <!-- section four starts here -->
 
-       <!-- section three starts here -->
+    <section class="fourth-highlight-wrapper">
+      <div class="left-side-wrapper full-highlight-section">
+        <div class="top-logo-wrapper">
+          <div class="logo-wrapper">
+            <img src="images/icons/watch-series5-logo.png" />
+          </div>
+        </div>
+        <div class="description-wraper">
+          With the new Always-On Retina display.<br />
+          You’ve never seen a watch like this.
+        </div>
+        <div class="links-wrapper">
+          <ul>
+            <li><a href="">Learn more</a></li>
+            <li><a href="">Buy</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="right-side-wrapper full-highlight-section">
+        <div class="top-logo-wrapper">
+          <div class="logo-wrapper">
+            <img src="images/icons/apple-card-logo.png" />
+          </div>
+        </div>
+        <div class="description-wraper">
+          Get 3% Daily Cash on purchases from Apple using Apple Card.
+        </div>
+        <div class="links-wrapper">
+          <ul>
+            <li><a href="">Learn more</a></li>
+            <li><a href="">Buy</a></li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <!-- section four ends here -->
 
+    <!-- section five starts here -->
 
-      <!-- section three ends here -->
+    <!-- section five ends here -->
 
-       <!-- section four starts here -->
+    <!-- section six starts here -->
 
+    <!-- section six ends here -->
 
-      <!-- section four ends here -->
+    <!-- fotter starts here -->
 
-       <!-- section five starts here -->
-
-
-      <!-- section five ends here -->
-
-       <!-- section six starts here -->
-
-
-      <!-- section six ends here -->
-
-       <!-- fotter starts here -->
-
-
-      <!-- footer one ends here -->
-</body>
+    <!-- footer one ends here -->
+  </body>
 </html>
