--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Amazon clone</title>
     <link rel="icon" href="images/icons/logo.png" type="image/png" />
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css"> -->
     <link
@@ -35,12 +35,17 @@
         <div class="title-wraper">iPhone 11</div>
         <div class="description-wrapper">
           Just the right amount of everything.
+          were on red
         </div>
         <div class="price-wrapper">From $16.62/mo. or $399 with trade‑in.</div>
         <div class="links-wrapper">
           <ul>
             <li><a href="">Learn more</a></li>
             <li><a href="">Buy</a></li>
+            <li><a href="">sell</a>
+            </li>
+            <li><a href="">adress</a>
+            </li>
           </ul>
         </div>
       </div>
